@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-06-08 [A] Added file and line numbers to debug mode query list {Nibbler}
 2009-06-08 [A] Added config option to count admin views {eenemeenemuu}
 2009-06-07 [D] Translation Copyright section for the french doc {Frantz}
 2009-06-06 [D] Replaced hard-coded table row alternation in docs with JS-driven alternation {GauGau}
